adjusted navbar on mobile: not fixed

--- a/style.css
+++ b/style.css
@@ -21,4 +21,12 @@ body{
     #homeQuote .display-4{
         font-size: 2.5rem;
     }
+
+    body{
+        padding-top: 0;
+    }
+
+    body .fixed-top{
+        position: relative;
+    }
 }
